Bug 158348 - text in shape on drawing canvas in table cell has wrong place
Summary: text in shape on drawing canvas in table cell has wrong place
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Regina Henschel
URL:
Whiteboard: target:24.2.0
Keywords: bibisectNotNeeded, implementationError
Depends on:
Blocks: DOCX-Canvas-Shape
  Show dependency treegraph
 
Reported: 2023-11-24 00:46 UTC by Regina Henschel
Modified: 2023-11-28 13:21 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
document to reproduce the error (21.10 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2023-11-24 00:46 UTC, Regina Henschel
Details
tdf158348 screenshot left LO right Word (97.57 KB, image/png)
2023-11-24 00:49 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2023-11-24 00:46:25 UTC
Created attachment 191015 [details]
document to reproduce the error

Open attached document in master. It has a table with two cells. The left cell contains a drawing canvas and therein two shapes with text. Notice that the text is at totally wrong place.

I have no idea yet, what here happens. The frames themselves are inside the shape but the text is not inside the frames.

This belongs to the change to import drawing canvas instead of VML fallback from commit https://gerrit.libreoffice.org/c/core/+/156629
Comment 1 Regina Henschel 2023-11-24 00:49:03 UTC
Created attachment 191016 [details]
tdf158348 screenshot left LO right Word

In case you have an idea about the reason please tell me.
Comment 2 m_a_riosv 2023-11-25 02:55:25 UTC
Reproducible
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: bc5c767e9aebadf12aa6a181a6ce066cbfff71ad
CPU threads: 16; OS: Windows 10.0 Build 22631; UI render: Skia/Vulkan; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: CL threaded

Ungrouping and saving with 7.6.3, then opens fine with 24.2, so seems the issue is in relation with the group.
Comment 3 raal 2023-11-25 12:16:33 UTC
(In reply to Regina Henschel from comment #0)
> 
> This belongs to the change to import drawing canvas instead of VML fallback
> from commit https://gerrit.libreoffice.org/c/core/+/156629

-> bibisectNoNeeded
Comment 4 Regina Henschel 2023-11-26 00:12:22 UTC
It is not really a regression, because the drawing canvas was not imported at all, but only the VML fallback.
Comment 5 m_a_riosv 2023-11-26 21:58:04 UTC
Sorry.
Comment 6 Commit Notification 2023-11-28 13:07:48 UTC
Regina Henschel committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/bf6350ef7f9856abc4d6a085bd2d2f95d6b0c84e

tdf#158348 Treat wordprocessing canvas like group shape

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.